[package]
name = "verser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
serde_json = "1.0.81"
futures = "0.3.21"

[dependencies.tokio]
version = "1.19.2"
features = ["full"]

[dependencies.serde]
version = "1.0.137"
features = ["derive"]
